--- a/src/components/ui/front/Container/Container.module.css
+++ b/src/components/ui/front/Container/Container.module.css
@@ -1,15 +1,16 @@
 .container {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
 }
 
 /* Mobile styles */
-@media (max-width: 768px) and (orientation: portrait) {
-    .container {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
-    }
+/* @media (max-width: 768px) and (orientation: portrait) { */
+@media (orientation: portrait) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+  }
 }
