--- a/src/components/ui/tree/FolderPlaceholder/FolderPlaceholder.module.css
+++ b/src/components/ui/tree/FolderPlaceholder/FolderPlaceholder.module.css
@@ -3,13 +3,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
   height: 100%;
   min-height: 400px;
   padding: 2rem;
   text-align: center;
   border-radius: 8px;
   box-sizing: border-box;
+
+  flex-grow: 1;
 }
 
 .folderIconContainer {
